# AndroicNativeCodeCoverageExample

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/nativecodecoveragetest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: a.cpp  a.h  native.cpp
app/src/main/java/com/example/nativecodecoveragetest/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/nativecodecoveragetest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
